updated instructions and overflow issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,8 +53,12 @@
   * {
     @apply border-border m-0 p-0;
   }
+  html {
+    @apply m-0 p-0 overflow-hidden;
+  }
+
   body {
-    @apply bg-background text-foreground overflow-hidden w-full h-screen;
+    @apply bg-background text-foreground w-full h-screen;
   }
 }
 
